--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -9,17 +9,9 @@ jobs:
     container:
       image: grafana/vale:latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Run Vale
-        run: |
-          (cd /etc/vale && vale sync)
-          vale --output=/etc/vale/rdjsonl.tmpl docs/sources | \
-            /bin/reviewdog \
-            --conf=/etc/vale/.reviewdog.yml \
-            --fail-on-error \
-            --f=rdjsonl \
-            --name=vale \
-            --reporter=github-pr-review
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+      - uses: grafana/writers-toolkit/vale-action@4b1248585248751e3b12fd020cf7ac91540ca09c # vale-action/v1.0.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
