--- a/test/integration/docker-compose-multiexec-host.yml
+++ b/test/integration/docker-compose-multiexec-host.yml
@@ -144,7 +144,7 @@ services:
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PORT: 8999
       BEYLA_INTERNAL_METRICS_PROMETHEUS_PATH: /metrics
       BEYLA_BPF_DISABLE_BLACK_BOX_CP: "${BEYLA_BPF_DISABLE_BLACK_BOX_CP}"
-      BEYLA_BPF_TC_CP: "${BEYLA_BPF_TC_CP}"
+      BEYLA_BPF_ENABLE_CONTEXT_PROPAGATION: "${BEYLA_BPF_ENABLE_CONTEXT_PROPAGATION}"
       BEYLA_BPF_TC_L7_CP: "${BEYLA_BPF_TC_L7_CP}"
       BEYLA_BPF_TRACK_REQUEST_HEADERS: "${BEYLA_BPF_TRACK_REQUEST_HEADERS}"
     ports:
