--- a/examples/k8s/unprivileged.yaml
+++ b/examples/k8s/unprivileged.yaml
@@ -117,13 +117,12 @@ spec:
               - CHECKPOINT_RESTORE  # <-- Important. Allows Beyla to open ELF files.
               - DAC_READ_SEARCH     # <-- Important. Allows Beyla to open ELF files.
               - PERFMON             # <-- Important. Allows Beyla to load BPF programs.
+              - NET_ADMIN           # <-- Important. Allows Beyla to inject HTTP and TCP context propagation information.
               #- SYS_RESOURCE       # <-- pre 5.11 only. Allows Beyla to increase the amount of locked memory.
               #- SYS_ADMIN          # <-- Required for Go application trace context propagation, or if kernel.perf_event_paranoid >= 3 on Debian distributions.
             drop:
               - ALL
         volumeMounts:
-        - name: var-run-beyla
-          mountPath: /var/run/beyla
         - name: cgroup
           mountPath: /sys/fs/cgroup
       tolerations:
@@ -132,8 +131,6 @@ spec:
       - effect: NoExecute
         operator: Exists
       volumes:
-      - name: var-run-beyla
-        emptyDir: {}      
       - name: cgroup
         hostPath:
           path: /sys/fs/cgroup
