Change the way resource attributes are populated (unbreaks a 2.0 change) (#1565)
* Change the way resource attributes is populated

* fix integration tests

* fixed tests

--- a/test/integration/k8s/manifests/05-uninstrumented-service.yml
+++ b/test/integration/k8s/manifests/05-uninstrumented-service.yml
@@ -42,7 +42,7 @@ spec:
     metadata:
       name: testserver
       annotations:
-        my.custom/name: 'overridden-testserver-name'
+        resource.opentelemetry.io/service.name: 'testserver'
       labels:
         app: testserver
         app.kubernetes.io/name: 'ignored-testserver-name'
