--- a/test/integration/docker-compose-grpc-http2-mux.yml
+++ b/test/integration/docker-compose-grpc-http2-mux.yml
@@ -41,7 +41,7 @@ services:
     pid: "host"
     environment:
       GOCOVERDIR: "/coverage"
-      BEYLA_PRINT_TRACES: "true"
+      BEYLA_TRACE_PRINTER: "text"
       BEYLA_METRICS_INTERVAL: "10ms"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
       BEYLA_LOG_LEVEL: "DEBUG"
