--- a/test/integration/k8s/manifests/05-uninstrumented-daemonset.yml
+++ b/test/integration/k8s/manifests/05-uninstrumented-daemonset.yml
@@ -25,6 +25,8 @@ spec:
       name: dsservice
       labels:
         app: dsservice
+      annotations:
+        resource.opentelemetry.io/deployment.environment: 'integration-test'
     spec:
       containers:
         - name: dsservice
