--- a/test/integration/k8s/manifests/05-uninstrumented-server-client-different-nodes.yml
+++ b/test/integration/k8s/manifests/05-uninstrumented-server-client-different-nodes.yml
@@ -37,6 +37,8 @@ spec:
       env:
         - name: TARGET_URL
           value: "http://otherinstance:8080"
+        - name: OTEL_RESOURCE_ATTRIBUTES
+          value: "deployment.environment=integration-test"
 ---
 apiVersion: v1
 kind: Service
@@ -110,3 +112,5 @@ spec:
           env:
             - name: LOG_LEVEL
               value: "DEBUG"
+            - name: OTEL_RESOURCE_ATTRIBUTES
+              value: "deployment.environment=integration-test"
