--- a/test/integration/k8s/manifests/05-uninstrumented-few-services.yml
+++ b/test/integration/k8s/manifests/05-uninstrumented-few-services.yml
@@ -51,6 +51,9 @@ spec:
       name: pytestserver
       labels:
         app: pytestserver
+        deployment.environment: 'integration-test'
+      annotations:
+        resource.opentelemetry.io/deployment.environment: 'to-be-ignored-in-favor-of-label'
     spec:
       affinity:
           nodeAffinity:
