--- a/test/integration/k8s/manifests/06-beyla-netolly-tc-promexport.yml
+++ b/test/integration/k8s/manifests/06-beyla-netolly-tc-promexport.yml
@@ -20,6 +20,8 @@ data:
       kubernetes:
         enable: true
         cluster_name: my-kube
+        resource_labels:
+          deployment.environment: "deployment.environment"
       select:
         beyla.network.flow.bytes:
           # assured cardinality explosion. Don't try in production!
