fix configuration of tests

--- a/test/integration/configs/instrumenter-config.yml
+++ b/test/integration/configs/instrumenter-config.yml
@@ -13,4 +13,4 @@ attributes:
   kubernetes:
     cluster_name: beyla
     resource_labels:
-      deployment.environment: "deployment.environment"
+      deployment.environment: ["deployment.environment"]
