--- a/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
@@ -13,7 +13,7 @@ data:
           - node
           - service
         resource_labels:
-          deployment.environment: "deployment.environment"
+          deployment.environment: ["deployment.environment"]
       select:
         "*":
           include: ["*"]
