--- a/test/integration/k8s/manifests/06-beyla-daemonset.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset.yml
@@ -9,7 +9,7 @@ data:
         enable: true
         cluster_name: beyla
         resource_labels:
-          deployment.environment: "deployment.environment"
+          deployment.environment: ["deployment.environment"]
       select:
         process_*:
           include: ["*"]
