--- a/test/integration/k8s/manifests/06-beyla-netolly-dropexternal.yml
+++ b/test/integration/k8s/manifests/06-beyla-netolly-dropexternal.yml
@@ -10,7 +10,7 @@ data:
         cluster_name: my-kube
         drop_external: true
         resource_labels:
-          deployment.environment: "deployment.environment"
+          deployment.environment: ["deployment.environment"]
       select:
         beyla.network.flow.bytes:
           include:
