--- a/test/integration/k8s/manifests/06-beyla-daemonset-python.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset-python.yml
@@ -9,7 +9,7 @@ data:
         enable: true
         cluster_name: beyla
         resource_labels:
-          deployment.environment: "deployment.environment"
+          deployment.environment: ["deployment.environment"]
     trace_printer: text
     log_level: debug
     discovery:
