Support standard annotations for OTEL generic resource attributes (#1569)
* support other resource metadata attributes

* integration tests

* fix integration tests beyla config

* fix configuration of tests

--- a/test/integration/configs/instrumenter-config.yml
+++ b/test/integration/configs/instrumenter-config.yml
@@ -12,3 +12,5 @@ otel_traces_export:
 attributes:
   kubernetes:
     cluster_name: beyla
+    resource_labels:
+      deployment.environment: ["deployment.environment"]
