--- a/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset-disable-informers.yml
@@ -12,6 +12,8 @@ data:
           - replicaset
           - node
           - service
+        resource_labels:
+          deployment.environment: ["deployment.environment"]
       select:
         "*":
           include: ["*"]
