--- a/test/integration/k8s/manifests/06-beyla-external-informer.yml
+++ b/test/integration/k8s/manifests/06-beyla-external-informer.yml
@@ -17,6 +17,8 @@ data:
         enable: true
         cluster_name: my-kube
         meta_cache_address: k8s-cache:50055
+        resource_labels:
+          deployment.environment: ["deployment.environment"]
       select:
         "*":
           include: [ "*" ]
