--- a/test/integration/k8s/manifests/06-beyla-daemonset.yml
+++ b/test/integration/k8s/manifests/06-beyla-daemonset.yml
@@ -8,6 +8,8 @@ data:
       kubernetes:
         enable: true
         cluster_name: beyla
+        resource_labels:
+          deployment.environment: ["deployment.environment"]
       select:
         process_*:
           include: ["*"]
