update configuration in integration tests to restore non-default removed env vars

--- a/test/integration/configs/instrumenter-config-go-otel-grpc.yml
+++ b/test/integration/configs/instrumenter-config-go-otel-grpc.yml
@@ -10,3 +10,6 @@ otel_traces_export:
 attributes:
   kubernetes:
     cluster_name: beyla
+  select:
+    "*":
+      include: ["url.path", "client.address"]
