--- a/test/integration/configs/instrumenter-config-node.yml
+++ b/test/integration/configs/instrumenter-config-node.yml
@@ -6,3 +6,7 @@ otel_metrics_export:
   endpoint: http://otelcol:4318
 otel_traces_export:
   endpoint: http://jaeger:4318
+attributes:
+  select:
+    "*":
+      include: ["url.path", "client.address"]
