--- a/test/integration/configs/instrumenter-config-php.yml
+++ b/test/integration/configs/instrumenter-config-php.yml
@@ -2,3 +2,7 @@ otel_metrics_export:
   endpoint: http://127.0.0.1:4018
 otel_traces_export:
   endpoint: http://127.0.0.1:4318
+attributes:
+  select:
+    "*":
+      include: ["url.path", "client.address"]
