--- a/test/integration/configs/instrumenter-config-ruby.yml
+++ b/test/integration/configs/instrumenter-config-ruby.yml
@@ -4,3 +4,7 @@ routes:
   unmatched: path
 otel_metrics_export:
   endpoint: http://otelcol:4318
+attributes:
+  select:
+    "*":
+      include: ["url.path", "client.address"]
