--- a/test/integration/configs/instrumenter-config-promscrape.yml
+++ b/test/integration/configs/instrumenter-config-promscrape.yml
@@ -24,6 +24,6 @@ attributes:
     process_network_io:
       include: ["*"]
     "*":
-      include: ["url.path", "client.address"]
+      include: ["*"]
   kubernetes:
     cluster_name: beyla
