--- a/test/integration/configs/instrumenter-config.yml
+++ b/test/integration/configs/instrumenter-config.yml
@@ -16,4 +16,4 @@ attributes:
       deployment.environment: ["deployment.environment"]
   select:
     "*":
-      include: ["url.path", "client.address"]
+      include: ["*"]
