Remove hidden/deprecated configuration values (#1570)
* Remove hidden/deprecated values

* update configuration in integration tests to restore non-default removed env vars

* fix include attribute values

--- a/test/integration/configs/instrumenter-config-grpc-export.yml
+++ b/test/integration/configs/instrumenter-config-grpc-export.yml
@@ -11,3 +11,7 @@ otel_metrics_export:
 otel_traces_export:
   endpoint: http://jaeger:4317
   protocol: grpc
+attributes:
+  select:
+    "*":
+      include: ["*"]
