--- a/test/integration/configs/instrumenter-config-multiexec-host.yml
+++ b/test/integration/configs/instrumenter-config-multiexec-host.yml
@@ -51,3 +51,5 @@ attributes:
   select:
     http_server_request_duration_seconds_count:
       exclude: ["server_address"]
+    "*":
+      include: ["*"]
