--- a/test/integration/configs/instrumenter-config-promscrape.yml
+++ b/test/integration/configs/instrumenter-config-promscrape.yml
@@ -23,5 +23,7 @@ attributes:
       include: ["*"]
     process_network_io:
       include: ["*"]
+    "*":
+      include: ["*"]
   kubernetes:
     cluster_name: beyla
