--- a/test/integration/configs/instrumenter-config.yml
+++ b/test/integration/configs/instrumenter-config.yml
@@ -14,3 +14,6 @@ attributes:
     cluster_name: beyla
     resource_labels:
       deployment.environment: ["deployment.environment"]
+  select:
+    "*":
+      include: ["*"]
