--- a/test/integration/configs/instrumenter-config-override-svcname.yml
+++ b/test/integration/configs/instrumenter-config-override-svcname.yml
@@ -7,3 +7,7 @@ otel_metrics_export:
   endpoint: http://otelcol:4318
 otel_traces_export:
   endpoint: http://jaeger:4318
+attributes:
+  select:
+    "*":
+      include: ["*"]
