Add comments and tests

--- a/test/oats/http/docker-compose-beyla-python-grpc-client.yml
+++ b/test/oats/http/docker-compose-beyla-python-grpc-client.yml
@@ -15,9 +15,6 @@ services:
     image: grpclient
     ports:
       - "8080:8080"
-    depends_on:
-      autoinstrumenter:
-        condition: service_started
   # eBPF auto instrumenter
   autoinstrumenter:
     build:
@@ -31,8 +28,8 @@ services:
       - ../../../testoutput:/coverage
       - /sys/fs/cgroup:/sys/fs/cgroup
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
-    network_mode: "service:grpcsrv"
-    pid: "service:grpcsrv"
+    network_mode: "service:testserver"
+    pid: "service:testserver"
     environment:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
@@ -45,5 +42,5 @@ services:
       BEYLA_BPF_ENABLE_CONTEXT_PROPAGATION: "true"
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://collector:4318"
     depends_on:
-      grpcsrv:
+      testserver:
         condition: service_started
