--- a/test/oats/redis/yaml/oats_go_redis.yaml
+++ b/test/oats/redis/yaml/oats_go_redis.yaml
@@ -8,30 +8,30 @@ input:
 interval: 500ms
 expected:
   traces:
-    - traceql: '{ .db.operation.name = "set" && .db.system = "redis" }'
+    - traceql: '{ .db.operation.name = "set" && .db.system.name = "redis" }'
       spans:
         - name: 'set'
           attributes:
             db.operation.name: set
-            db.system: redis
+            db.system.name: redis
             server.port: 6379
             db.query.text: "set beyla rocks "
   metrics:
-    - promql: 'db_client_operation_duration_sum{db_operation_name="get", db_system="redis"}'
+    - promql: 'db_client_operation_duration_sum{db_operation_name="get", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0", db_operation_name="get", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="0", db_operation_name="get", db_system_name="redis"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10", db_operation_name="get", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="10", db_operation_name="get", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_operation_name="get", db_system="redis"}'
+    - promql: 'db_client_operation_duration_count{db_operation_name="get", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_sum{db_operation_name="set", db_system="redis"}'
+    - promql: 'db_client_operation_duration_sum{db_operation_name="set", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0", db_operation_name="set", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="0", db_operation_name="set", db_system_name="redis"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10", db_operation_name="set", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="10", db_operation_name="set", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_operation_name="set", db_system="redis"}'
+    - promql: 'db_client_operation_duration_count{db_operation_name="set", db_system_name="redis"}'
       value: "> 0"
 
 
