--- a/test/oats/redis/yaml/oats_redis.yaml
+++ b/test/oats/redis/yaml/oats_redis.yaml
@@ -8,46 +8,46 @@ input:
 interval: 500ms
 expected:
   traces:
-    - traceql: '{ .db.operation.name = "SET" && .db.system = "redis" }'
+    - traceql: '{ .db.operation.name = "SET" && .db.system.name = "redis" }'
       spans:
         - name: 'SET'
           attributes:
             db.operation.name: SET
-            db.system: redis
+            db.system.name: redis
             server.port: 6379
             db.query.text: "SET beyla rocks "
   metrics:
-    - promql: 'db_client_operation_duration_sum{db_operation_name="GET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_sum{db_operation_name="GET", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="GET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="GET", db_system_name="redis"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="GET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="GET", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_operation_name="GET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_count{db_operation_name="GET", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_sum{db_operation_name="SET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_sum{db_operation_name="SET", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="SET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="SET", db_system_name="redis"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="SET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="SET", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_operation_name="SET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_count{db_operation_name="SET", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_sum{db_operation_name="HSET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_sum{db_operation_name="HSET", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="HSET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="HSET", db_system_name="redis"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="HSET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="HSET", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_operation_name="HSET", db_system="redis"}'
+    - promql: 'db_client_operation_duration_count{db_operation_name="HSET", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_sum{db_operation_name="HGETALL", db_system="redis"}'
+    - promql: 'db_client_operation_duration_sum{db_operation_name="HGETALL", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="HGETALL", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="HGETALL", db_system_name="redis"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="HGETALL", db_system="redis"}'
+    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="HGETALL", db_system_name="redis"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_operation_name="HGETALL", db_system="redis"}'
+    - promql: 'db_client_operation_duration_count{db_operation_name="HGETALL", db_system_name="redis"}'
       value: "> 0"
 
 
