--- a/test/oats/sql/yaml/oats_sql.yaml
+++ b/test/oats/sql/yaml/oats_sql.yaml
@@ -9,34 +9,34 @@ input:
 interval: 500ms
 expected:
   traces:
-    - traceql: '{ .db.operation.name = "SELECT" && .db.system = "other_sql"}'
+    - traceql: '{ .db.operation.name = "SELECT" && .db.system.name = "other_sql"}'
       spans:
         - name: 'SELECT students'
           attributes:
             db.operation.name: SELECT
             db.collection.name: students
-            db.system: other_sql
+            db.system.name: other_sql
     - traceql: '{ .db.operation.name = "UPDATE" }'
       spans:
         - name: 'UPDATE students'
           attributes:
             db.operation.name: UPDATE
             db.collection.name: students  
-            db.system: other_sql
+            db.system.name: other_sql
   metrics:
-    - promql: 'db_client_operation_duration_sum{db_operation_name="SELECT", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_sum{db_operation_name="SELECT", db_system_name="other_sql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="SELECT", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="SELECT", db_system_name="other_sql"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="SELECT", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="SELECT", db_system_name="other_sql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_operation_name="SELECT", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_count{db_operation_name="SELECT", db_system_name="other_sql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_sum{db_operation_name="UPDATE", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_sum{db_operation_name="UPDATE", db_system_name="other_sql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="UPDATE", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="UPDATE", db_system_name="other_sql"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="UPDATE", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="UPDATE", db_system_name="other_sql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_operation_name="UPDATE", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_count{db_operation_name="UPDATE", db_system_name="other_sql"}'
       value: "> 0"
