--- a/test/oats/sql/yaml/oats_sql_go_postgres.yaml
+++ b/test/oats/sql/yaml/oats_sql_go_postgres.yaml
@@ -8,19 +8,19 @@ input:
 interval: 500ms
 expected:
   traces:
-    - traceql: '{ .db.operation.name = "SELECT" && .db.system = "other_sql"}'
+    - traceql: '{ .db.operation.name = "SELECT" && .db.system.name = "other_sql"}'
       spans:
         - name: 'SELECT accounting.contacts'
           attributes:
             db.operation.name: SELECT
             db.collection.name: accounting.contacts
-            db.system: other_sql
+            db.system.name: other_sql
   metrics:
-    - promql: 'db_client_operation_duration_sum{db_operation_name="SELECT", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_sum{db_operation_name="SELECT", db_system_name="other_sql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="SELECT", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_bucket{le="0",db_operation_name="SELECT", db_system_name="other_sql"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="SELECT", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_bucket{le="10",db_operation_name="SELECT", db_system_name="other_sql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_operation_name="SELECT", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_count{db_operation_name="SELECT", db_system_name="other_sql"}'
       value: "> 0"
