--- a/test/oats/sql/yaml/oats_sql_other_langs_prep_mysql.yaml
+++ b/test/oats/sql/yaml/oats_sql_other_langs_prep_mysql.yaml
@@ -8,19 +8,19 @@ input:
 interval: 500ms
 expected:
   traces:
-    - traceql: '{ .db.operation.name = "SELECT" && .db.system = "mysql"}'
+    - traceql: '{ .db.operation.name = "SELECT" && .db.system.name = "mysql"}'
       spans:
         - name: 'SELECT actor'
           attributes:
             db.operation.name: SELECT
             db.collection.name: actor
-            db.system: mysql
+            db.system.name: mysql
   metrics:
-    - promql: 'db_client_operation_duration_sum{db_system="mysql"}'
+    - promql: 'db_client_operation_duration_sum{db_system_name="mysql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0", db_system="mysql"}'
+    - promql: 'db_client_operation_duration_bucket{le="0", db_system_name="mysql"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10", db_system="mysql"}'
+    - promql: 'db_client_operation_duration_bucket{le="10", db_system_name="mysql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_system="mysql"}'
+    - promql: 'db_client_operation_duration_count{db_system_name="mysql"}'
       value: "> 0"
