--- a/test/oats/sql/yaml/oats_sql_statement.yaml
+++ b/test/oats/sql/yaml/oats_sql_statement.yaml
@@ -8,7 +8,7 @@ input:
 interval: 500ms
 expected:
   traces:
-    - traceql: '{ .db.operation.name = "UPDATE" && .db.system = "other_sql"}'
+    - traceql: '{ .db.operation.name = "UPDATE" && .db.system.name = "other_sql"}'
       spans:
         - name: 'UPDATE students'
           attributes:
@@ -16,11 +16,11 @@ expected:
             db.collection.name: students            
             db.query.text: "Update students SET name = 'Bob' WHERE id = '1'"
   metrics:
-    - promql: 'db_client_operation_duration_sum{db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_sum{db_system_name="other_sql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_bucket{le="0", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_bucket{le="0", db_system_name="other_sql"}'
       value: "== 0"
-    - promql: 'db_client_operation_duration_bucket{le="10", db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_bucket{le="10", db_system_name="other_sql"}'
       value: "> 0"
-    - promql: 'db_client_operation_duration_count{db_system="other_sql"}'
+    - promql: 'db_client_operation_duration_count{db_system_name="other_sql"}'
       value: "> 0"
