--- a/test/integration/docker-compose-netolly-direction.yml
+++ b/test/integration/docker-compose-netolly-direction.yml
@@ -43,6 +43,9 @@ services:
       BEYLA_NETWORK_SOURCE: ${BEYLA_NETWORK_SOURCE}
       BEYLA_OTEL_METRICS_FEATURES: "network" # implicitly enabling network metrics without a global enable
       BEYLA_NETWORK_PRINT_FLOWS: "true"
+      BEYLA_METRICS_INTERVAL: "1s"
+      BEYLA_BPF_BATCH_TIMEOUT: "1s"
+      BEYLA_NETWORK_CACHE_ACTIVE_TIMEOUT: "1s"
       BEYLA_NETWORK_DEDUPER: ${BEYLA_NETWORK_DEDUPER}
       OTEL_EXPORTER_OTLP_ENDPOINT: http://otelcol:4318
       BEYLA_LOG_LEVEL: "DEBUG"
