OTEL integration tests

--- a/test/integration/k8s/manifests/06-beyla-netolly-multizone.yml
+++ b/test/integration/k8s/manifests/06-beyla-netolly-multizone.yml
@@ -7,6 +7,7 @@ data:
     log_level: debug
     otel_metrics_export:
       endpoint: http://otelcol.default:4317
+      features: ["network", "network_inter_zone"]
     network:
       protocols:
         - TCP
