--- a/test/integration/configs/prometheus-config-promscrape-k8s-test.yml
+++ b/test/integration/configs/prometheus-config-promscrape-k8s-test.yml
@@ -22,7 +22,7 @@ scrape_configs:
   # * `prometheus.io/path`: If the metrics path is not `/metrics` override this.
   # * `prometheus.io/port`: If the metrics are exposed on a different port to the
   #   service then set this appropriately.
-  - job_name: 'kubernetes-pods'
+  - job_name: 'beyla-network-flows-scrape'
     honor_labels: true
     kubernetes_sd_configs:
       - role: pod
