--- a/test/integration/docker-compose-multiexec.yml
+++ b/test/integration/docker-compose-multiexec.yml
@@ -143,6 +143,7 @@ services:
       BEYLA_BPF_ENABLE_CONTEXT_PROPAGATION: "${BEYLA_BPF_ENABLE_CONTEXT_PROPAGATION}"
       BEYLA_BPF_TC_L7_CP: "${BEYLA_BPF_TC_L7_CP}"
       BEYLA_BPF_TRACK_REQUEST_HEADERS: "${BEYLA_BPF_TRACK_REQUEST_HEADERS}"
+      BEYLA_BPF_HIGH_REQUEST_VOLUME: 1
     ports:
       - "8999:8999"      
 
