Set proper node affinity to Prometheus scraper

--- a/test/integration/k8s/manifests/00-kind-multi-zone.yml
+++ b/test/integration/k8s/manifests/00-kind-multi-zone.yml
@@ -28,7 +28,7 @@ nodes:
     labels:
       # faking a multi-zone cluster
       topology.kubernetes.io/zone: client-zone
-      # otel collector needs to be placed here, due to port mappings
+      # otel collector / prom scraper needs to be placed here, due to port mappings
       deployment/zone: otel
     extraMounts:
       # configuration files that need to be mounted in the host
