fix now non-multizone tests

--- a/test/integration/k8s/manifests/02-prometheus-promscrape-multizone.yml
+++ b/test/integration/k8s/manifests/02-prometheus-promscrape-multizone.yml
@@ -48,6 +48,8 @@ metadata:
   labels:
     app: prometheus
 spec:
+  nodeSelector:
+    deployment/zone: otel
   volumes:
     - name: configs
       persistentVolumeClaim:
