--- a/test/integration/components/pythonsql/Dockerfile_ssl
+++ b/test/integration/components/pythonsql/Dockerfile_ssl
@@ -3,6 +3,8 @@ FROM python:3.12
 EXPOSE 8080
 RUN apt update
 RUN apt install -y libpq-dev
-RUN pip install fastapi uvicorn psycopg2
-COPY main_ssl.py /main.py
-CMD ["uvicorn", "--port", "8080", "--host", "0.0.0.0", "main:app"]
+RUN pip install fastapi uvicorn gunicorn psycopg2
+COPY main_ssl.py /main_ssl.py
+COPY server.crt /server.crt
+COPY server.key /server.key
+CMD ["gunicorn", "--keyfile", "/server.key", "--certfile", "/server.crt", "-w", "3", "-b", "0.0.0.0:8080", "-k", "uvicorn.workers.UvicornWorker", "main_ssl:app"]
