--- a/.github/workflows/git-lfs-check.yml
+++ b/.github/workflows/git-lfs-check.yml
@@ -1,10 +1,7 @@
 name: Check git-lfs files
 
 on:
-  push:
-    branches: [ 'main', 'release-*' ]
-  pull_request:
-    branches: [ 'main', 'release-*' ]
+  workflow_call:
 
 jobs:
   git-lfs:
