--- a/.github/workflows/pull_request_integration_tests_vm_5.15_x86_64.yml
+++ b/.github/workflows/pull_request_integration_tests_vm_5.15_x86_64.yml
@@ -1,12 +1,7 @@
 name: Pull request integration tests on VM 5.15 x86_64
 
 on:
-  push:
-    branches: [ 'main', 'release-*' ]
-    paths: [ 'bpf/**' ]
-  pull_request:
-    branches: [ 'main', 'release-*' ]
-    paths: [ 'bpf/**' ]
+  workflow_call:
 
 jobs:
   test:
