Build ebpf objects on CI (#1639)
---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/pull_request_integration_tests.yml
+++ b/.github/workflows/pull_request_integration_tests.yml
@@ -1,10 +1,7 @@
 name: Pull request integration tests
 
 on:
-  push:
-    branches: [ 'main', 'release-*' ]
-  pull_request:
-    branches: [ 'main', 'release-*' ]
+  workflow_call:
 
 jobs:
   test:
@@ -32,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: Test Logs
+          name: Integration Test Logs
           path: |
             testoutput/*.log
             testoutput/kind
