--- a/.github/workflows/pull_request_integration_tests_arm.yml
+++ b/.github/workflows/pull_request_integration_tests_arm.yml
@@ -1,10 +1,7 @@
 name: Pull request integration tests ARM
 
 on:
-  push:
-    branches: [ 'main', 'release-*' ]
-  pull_request:
-    branches: [ 'main', 'release-*' ]
+  workflow_call:
 
 jobs:
   test:
@@ -32,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: Test Logs
+          name: Integration Test Logs (ARM)
           path: |
             testoutput/*.log
             testoutput/kind
