Trying out github token

--- a/.github/workflows/beyla_build.yml
+++ b/.github/workflows/beyla_build.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
-          token: ${{ secrets.BEYLA_WORKFLOW_TOKEN }}
+          #token: ${{ secrets.BEYLA_WORKFLOW_TOKEN }}
 
       - name: commit-check
         id: commit-check
@@ -44,7 +44,7 @@ jobs:
         id: commit
         if: ${{ steps.commit-check.outputs.should_build == 'true' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.BEYLA_WORKFLOW_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
