Revert "Remove codecov from VM tests (#1647)"
This reverts commit fd2b06e111053f2b9a0f110641f9ee350b7ea17a.

--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -47,3 +47,10 @@ jobs:
           path: |
             testoutput/*.log
             testoutput/kind
+      - name: Report coverage
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          file: ./testoutput/itest-covdata.txt
+          flags: integration-test-vm-${{ inputs.arch }}-${{ inputs.kernel-version }}
