Revert "Build ebpf objects on CI (#1639)"
This reverts commit 4639d0ef868d0288a6a2c2ac71d7e90bbd52c4ea.

--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -1,7 +1,10 @@
 name: Clang Format Check
 
 on:
-  workflow_call:
+  push:
+    branches: [ 'main', 'release-*' ]
+  pull_request:
+    branches: [ 'main', 'release-*' ]
 
 jobs:
   clang-format:
