--- a/.github/workflows/git-lfs-check.yml
+++ b/.github/workflows/git-lfs-check.yml
@@ -1,7 +1,10 @@
 name: Check git-lfs files
 
 on:
-  workflow_call:
+  push:
+    branches: [ 'main', 'release-*' ]
+  pull_request:
+    branches: [ 'main', 'release-*' ]
 
 jobs:
   git-lfs:
