Revert building binaries on CI (#1654)
* Revert "Remove codecov from VM tests (#1647)"

This reverts commit fd2b06e111053f2b9a0f110641f9ee350b7ea17a.

* Revert "Remove stray debug message (#1648)"

This reverts commit 41f2551d938d2aea33b04632f789adc21fc9c26c.

* Revert "Build ebpf objects on CI (#1639)"

This reverts commit 4639d0ef868d0288a6a2c2ac71d7e90bbd52c4ea.

* Update eBPF files

--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -43,7 +43,14 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: Test Logs ${{ inputs.arch }}-${{ inputs.kernel-version }}
+          name: Test Logs
           path: |
             testoutput/*.log
             testoutput/kind
+      - name: Report coverage
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          file: ./testoutput/itest-covdata.txt
+          flags: integration-test-vm-${{ inputs.arch }}-${{ inputs.kernel-version }}
